# PSRA

./: .gitignore  README.md  tqqq
0404/ald_cpu_hdmi_vga/ald/: ald.xpr
0404/ald_cpu_hdmi_vga/ip_repo/draw_bbox/: draw_bbox.xpr
0404/ald_cpu_hdmi_vga/ip_repo/parameter_register_1.0/: component.xml
0404/ald_cpu_hdmi_vga/ip_repo/shift_reg/: shift_reg.xpr
0404/ald_cpu_hdmi_vga/ip_repo/write_video_bram/: write_video_bram.xpr
2504/ald/: ald.xpr
2504/ald/ald.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
2504/ald/ald.hw/hw_1/: hw.xml
2504/ald/ald.ip_user_files/mem_init_files/: ps7_init.html
2504/ald/ald.runs/.jobs/: vrs_config_1.xml
2504/ald/ald.runs/ald_auto_pc_0_synth_1/: .vivado.begin.rst  ald_auto_pc_0.tcl  ald_auto_pc_0.vds  ald_auto_pc_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
2504/ald/ald.runs/ald_axi_smc_1_synth_1/: ald_axi_smc_1.tcl  ald_axi_smc_1_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  vivado.jou
2504/ald/ald.runs/ald_blk_mem_gen_0_0_synth_1/: ald_blk_mem_gen_0_0.vds  ald_blk_mem_gen_0_0_utilization_synth.pb  ald_blk_mem_gen_0_0_utilization_synth.rpt  gen_run.xml  vivado.jou
2504/ald/ald.runs/impl_1/: gen_run.xml  (+40 more)
Vivado/ald/: ald.xpr
Vivado/ald/ald.sdk/: ald_wrapper.hdf
Vivado/ip_repo/draw_bbox/: draw_bbox.xpr
Vivado/ip_repo/parameter_register_1.0/: component.xml
Vivado/write_video_bram/: write_video_bram.xpr
ald_sw_cpp/: CMakeLists.txt  CMakeLists_lab.txt  main.cpp
ald_sw_cpp/cmakelists/: CMakeLists_lab.txt
(+1752 files in other folders)
